<resources>
    <string name="app_name">login2</string>
    <string name="action_settings">Settings</string>
    <string name="saludo">BIENVENIDO</string>
    <string name="saludo2">BIENVENIDO AL SISTEMA</string>
    <string name="saludoRegistro">Registro</string>
    <string name="user">username</string>
    <string name="pass">password</string>
    <string name="boton">LOGIN</string>
    <string name="botonr">Registro</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="Nombre1">Coello Allan Gustavo Marcelo</string>
    <string name="Nombre2">Cardenas Lara Luis Alejandro</string>

    <string-array name="fecha">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
