<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/saludoRegistro"
            android:textSize="20dp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/user" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="nombre" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="apellido" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="telefono"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:text="Genero"
            android:textSize="18dp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/opcionesSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/gHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Hombre" />

            <RadioButton
                android:id="@+id/gMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mujer" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:text="Fecha Nacimiento"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:orientation="horizontal">

            <DatePicker
                android:id="@+id/fecha"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:text="Pick Date" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:text="Asignaturas"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/optativa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Optativa III" />

        <CheckBox
            android:id="@+id/distribuida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Distribuida" />

        <CheckBox
            android:id="@+id/redes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Redes" />

        <CheckBox
            android:id="@+id/analisis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Analisis" />

        <CheckBox
            android:id="@+id/protocolos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Protocolos" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:text="Beca"
            android:textSize="18dp" />

        <Switch
            android:id="@+id/beca"
            android:layout_width="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:checked="false" />

        <Button
            android:id="@+id/btnRegistrarDatos"
            android:layout_width="191dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="#3E84EE"
            android:text="@string/botonr"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>